<resources>
    <!-- api keys -->
    <string name="client_id" translatable="false">634395716840-a89s9gmb61617t7e5afqt7c825uvvfcr.apps.googleusercontent.com</string>
    <string name="app_id" translatable="false">634395716840</string>

    <!-- intro slides -->
    <!-- irish locale cannot be applied at this point so it will only default to english -->
    <string name="intro_slide_1_title" translatable="false">Welcome to %1$s</string>
    <string name="intro_slide_1_description" translatable="false">Learn noun genders through fun and interesting games</string>
    <string name="intro_slide_2_title" translatable="false">Multiple mode types</string>
    <string name="intro_slide_2_description" translatable="false">Train various areas including gender, declension &amp; plural.</string>
    <string name="intro_slide_3_title" translatable="false">Compete with players</string>
    <string name="intro_slide_3_description" translatable="false">Earn a world-wide high score and rise in the ranks.</string>
    <string name="intro_slide_4_title" translatable="false">Train your vocab</string>
    <string name="intro_slide_4_description" translatable="false">More than 130+ categories and 40,000+ words to expand your vocabulary.</string>
    <string name="intro_slide_5_title" translatable="false">Ready to start?</string>
    <string name="intro_slide_5_description" translatable="false">Begin your journey and widen your knowledge.</string>

    <!-- miscellaneous -->
    <string name="app_name">Irish Nouns</string>

    <!-- main activity -->
    <string name="exit_game">Exit game?</string>
    <string name="confirm_exit_game">Click close below if you wish to exit the game</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="mode_coming_soon">Mode coming soon!</string>

    <!-- gender guessing mode -->
    <string name="correct">correct!</string>
    <string name="oops">oops!</string>
    <string name="noun_is_answer">%1$s is %2$s</string>
    <string name="masculine">masculine</string>
    <string name="feminine">feminine</string>
    <string name="masc">m</string>
    <string name="fem">f</string>
    <string name="end_of_deck">End of %1$s</string>
    <string name="end_of_deck_description">The end of the current deck has been reached. Would you like to try again or choose another deck?</string>
    <string name="new_deck">New Deck</string>
    <string name="restart">Restart</string>
    <string name="session_in_progress">Session in progress</string>
    <string name="confirm_leave_when_in_session">Are you sure you want to leave the current game? Your progress will be lost.</string>
    <string name="ok">OK</string>
    <string name="confirm_leave_when_changing_category">Are you sure you want to change category? Your progress will be reset if you return.</string>
    <string name="high_score">high score:</string>

    <!-- settings -->
    <string name="build_version">Build version</string>
    <string name="made_in_ireland">Version %1$s - made with ❤ in Ireland 🇮🇪</string>
    <string name="show_hints_title">Show Noun Hints</string>
    <string name="show_hints_description">If a hint is available, some nouns will have a highlighted ending.</string>
    <string name="leave_review_title">Leave a Review</string>
    <string name="leave_review_description">Love it? Hate it? Let us know by leaving a rating and review on Google Play.</string>
    <string name="more_apps_title">More Apps</string>
    <string name="more_apps_description">Click to view other apps from Syzible.</string>
    <string name="game_preferences">🏃‍♂ Game Preferences️</string>
    <string name="developer">⚡️ Developer</string>
    <string name="build_information">🔧 Build Information</string>
    <string name="irish_language">Irish Language</string>
    <string name="irish_language_description">Enable this if you wish to play the game through the Irish language.</string>
    <string name="share_app">Share Irish Nouns</string>
    <string name="share_app_body">Check out this app I found! %1$s</string>
    <string name="share_app_description">Click here to share the app with friends and family</string>

    <!-- main menu -->
    <string name="sign_out">Sign out</string>
    <string name="sign_out_information">Are you sure you want to sign out? You will not be able to track achievements and leaderboards.</string>
    <string name="guess_the_gender_mode">Guess the gender</string>
    <string name="how_to_play_mode">How to play</string>
    <string name="settings_mode">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="please_wait_signing_in">Please wait, signing in ...</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="push_notifications_description">Allow push notifications to be dispatched from time to time.</string>

</resources>
