<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/game_preferences">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="settings_show_hints"
            android:summary="@string/show_hints_description"
            android:title="@string/show_hints_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="settings_enable_irish_language"
            android:summary="@string/irish_language_description"
            android:title="@string/irish_language" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/developer">
        <Preference
            android:key="settings_leave_review"
            android:summary="@string/leave_review_description"
            android:title="@string/leave_review_title" />

        <Preference
            android:key="settings_more_apps"
            android:summary="@string/more_apps_description"
            android:title="@string/more_apps_title" />

        <Preference
            android:key="settings_share_app"
            android:summary="@string/share_app_description"
            android:title="@string/share_app" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/build_information">
        <Preference
            android:key="settings_build_version"
            android:summary="@string/made_in_ireland"
            android:title="@string/build_version" />
    </PreferenceCategory>
</PreferenceScreen>